--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,8 @@ RoxygenNote: 7.3.2
 Imports:
     httr,
     leaflet,
-    jsonlite,
-    dplyr
+    shiny
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
