--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(get_weather)
 export(golf_map_weather)
 export(show_golf_map)
+export(start_golf_app)
 export(weather_by_coords)
 importFrom(httr,GET)
 importFrom(httr,content)
@@ -10,3 +11,13 @@ importFrom(httr,status_code)
 importFrom(leaflet,addMarkers)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,leaflet)
+importFrom(leaflet,leafletOutput)
+importFrom(leaflet,renderLeaflet)
+importFrom(shiny,fluidPage)
+importFrom(shiny,mainPanel)
+importFrom(shiny,req)
+importFrom(shiny,shinyApp)
+importFrom(shiny,sidebarLayout)
+importFrom(shiny,sidebarPanel)
+importFrom(shiny,textInput)
+importFrom(shiny,titlePanel)
